bad/mul_invalid_types_class_array.example_compiler_output
ERROR
[1mbad/mul_invalid_types_class_array.lat:6:4: [1;31merror: [0;1mmultiplication is defined only for int values, not `X` and `string[]`[m
	x * new string[3];
	  [1;32m^[m
